# ActFold

./: .gitignore  AGENTS.md  ActFold_Prompt_Optimized.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  pyproject.toml  requirements-bench.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
actfold/: __init__.py
actfold/configs/: __init__.py  ablation_threshold.yaml  default.yaml  real_model_example.yaml
actfold/core/: __init__.py  activation_cache.py  branch_manager.py  cache_factory.py  chunked_cache.py  folded_transformer.py  folding_context.py  folding_scheduler.py  fused_ops.py  model_wrapper.py  similarity_gate.py
actfold/eval/: __init__.py  ablation_study.py  base_adapter.py  benchmark_runner.py  evalplus_adapter.py  generation_utils.py  judges.py  lm_eval_adapter.py
actfold/models/: __init__.py  architecture_utils.py  base.py  causal_lm.py  diffusion_sampler.py  dream.py  dream_sampler.py  fast_dllm.py  (+7 more)
docs/: ALGORITHM.md  EXPERIMENTS.md
figures/: README.md
results/: cache_size_impact.csv  layerwise_folding.csv  threshold_sensitivity.csv
scripts/: generate_figures.py  run_ablation.sh  run_benchmarks.sh  run_demo.sh  run_real_model_benchmark.sh  run_tests.sh
tests/: conftest.py  test_activation_cache.py  test_adaptive_draft_controller.py  test_architecture_utils.py  test_base_adapter.py  test_branch_manager.py  test_chunked_cache.py  test_config_manager.py  test_cost_model.py  test_diffusion_samplers.py  test_draft_generator.py  test_eval.py  test_fast_dllm_adapter.py  test_flops_counter.py  test_folded_generation.py  test_folded_transformer.py  test_folding_scheduler.py  test_fused_ops.py  test_gpu_profiler.py  test_integration.py  test_judges.py  test_logger.py  test_model_wrapper.py  test_models.py  test_profiler.py  test_real_model_benchmark.py  test_similarity_gate.py  test_stability_profiler.py
(+26 files in other folders)
